--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <application
@@ -23,6 +24,10 @@
 
         <service
             android:name="org.chaynik.wheely.service.WebSocketService"
+            android:enabled="true"
+            android:exported="false" />
+        <service
+            android:name="org.chaynik.wheely.service.LocationService"
             android:enabled="true"
             android:exported="false" />
         <service
